@@ -1,8 +1,8 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.5.1
-Date: 2020-03-04
+Version: 1.5.2
+Date: 2020-04-01
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
